@@ -31,7 +31,18 @@
             <artifactId>javafx-fxml</artifactId>
             <version>21.0.5</version>
         </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-base</artifactId>
+            <version>21.0.5</version>
+        </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-graphics</artifactId>
+            <version>21.0.5</version>
+        </dependency>
     </dependencies>
+
     <build>
         <plugins>
             <plugin>
@@ -40,6 +51,21 @@
                 <version>3.1.0</version>
                 <configuration>
                     <mainClass>org.example.boundary.UserPreferencesBoundary</mainClass>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.1</version>
+                <configuration>
+                    <source>11</source>
+                    <target>11</target>
+                    <compilerArgs>
+                        <arg>--module-path</arg>
+                        <arg>/home/federico/javafx-sdk-21.0.5/lib</arg> <!-- Sostituisci con il percorso corretto -->
+                        <arg>--add-modules</arg>
+                        <arg>javafx.controls,javafx.fxml</arg>
+                    </compilerArgs>
                 </configuration>
             </plugin>
         </plugins>
